# lspf

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/lspf/: CHANGELOG.md  Cargo.toml
crates/lspf-hello/: Cargo.toml
crates/lspf-hello/tests/: editor_docs.rs  smoke.rs
crates/lspf/src/: dispatcher.rs  error.rs  lib.rs  raw.rs  runtime.rs
crates/lspf/src/transport/: envelope.rs  mod.rs  stdio.rs
crates/lspf/tests/: concurrency.rs  doc_sync_ordering.rs  documents.rs  lifecycle_ordering.rs  position_encoding.rs  runtime_boundary.rs
docs/adr/: 0001-async-only-runtime.md  0002-build-dispatcher-from-scratch.md  0003-shared-self-concurrent-dispatch.md  0004-capability-auto-derivation.md  0005-rope-backed-opaque-document.md  0006-handler-result-and-framework-owned-error.md  0007-cancellation-model.md  0008-v1-scope-server-only-pygls-helper-coverage.md  0009-context-as-handler-parameter.md  0010-own-layer-trait-not-tower.md  0011-transport-shape-and-v1-adapters.md  0012-bounded-concurrency-by-default.md  0013-single-crate-feature-flags.md  0014-protocol-types-from-lsp-types-crate.md  0015-outgoing-channel-unbounded-send-loop.md  0016-position-encoding.md  0017-typed-router-and-capability-catalog.md  0018-protocol-engine-and-outbound-request-broker.md  0019-protocol-invariants-and-service-layers.md  0020-runtime-and-native-wasm-send-model.md
docs/migrations/: 0.1-to-0.2.md
examples/hello/: main.rs
src/: context.rs  dispatcher.rs  documents.rs  error.rs  lib.rs  raw.rs  server.rs
src/transport/: envelope.rs  framing.rs  mod.rs  stdio.rs
tests/: acquire_permit_span.rs  cancellation.rs  concurrency.rs  concurrency_cap.rs  doc_sync_ordering.rs  documents.rs  lifecycle_ordering.rs  smoke.rs
tests/fixtures/: initialize-params.json
tools/vscode-test-client/: README.md  package-lock.json  package.json  tsconfig.json
tools/vscode-test-client/src/: extension.ts  serverPath.test.ts  serverPath.ts
