[workspace]
members = ["crates/lspf", "crates/lspf-hello"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.3"
edition = "2024"
authors = ["Yuming Chen"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/meymchen/lspf"

[workspace.dependencies]
lspf = { path = "crates/lspf", version = "0.1.0-alpha.3" }
bytes = "1"
futures-util = { version = "0.3", default-features = false }
lsp-types = "0.97"
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
