[package]
name = "lspf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust framework for building extensible LSP language servers"
readme = "../../README.md"

[dependencies]
bytes.workspace = true
futures-util.workspace = true
lsp-types.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
# `rt` pulls in the `CancellationToken` primitive used by ADR 0007.
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "io-std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
tracing-subscriber.workspace = true
